[gd_scene load_steps=13 format=3 uid="uid://c4j6dtpofcqem"]

[ext_resource type="Theme" uid="uid://b06ip02xrlqbb" path="res://scenes/ui/game_ui_theme.tres" id="1_ms35t"]
[ext_resource type="Texture2D" uid="uid://d3x2iisvx0qny" path="res://assets/game/objects/basic_tools_and_meterials.png" id="2_qgnlu"]
[ext_resource type="Script" path="res://scenes/ui/inventory_panel.gd" id="2_sanme"]
[ext_resource type="Texture2D" uid="uid://cn4y3ti47rxw8" path="res://assets/game/objects/basic_plants.png" id="3_m6rcm"]
[ext_resource type="Texture2D" uid="uid://42a83xpp2rhg" path="res://assets/game/objects/egg_item.png" id="4_0x1kl"]
[ext_resource type="Texture2D" uid="uid://cl48acderisxm" path="res://assets/game/objects/simple_milk_and_grass_item.png" id="5_q5ver"]

[sub_resource type="AtlasTexture" id="AtlasTexture_47rv2"]
atlas = ExtResource("2_qgnlu")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a80gb"]
atlas = ExtResource("2_qgnlu")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pceqw"]
atlas = ExtResource("3_m6rcm")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0cri"]
atlas = ExtResource("3_m6rcm")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j8gf"]
atlas = ExtResource("4_0x1kl")

[sub_resource type="AtlasTexture" id="AtlasTexture_snrxo"]
atlas = ExtResource("5_q5ver")
region = Rect2(32, 0, 16, 16)

[node name="InventoryPanel" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_ms35t")
theme_type_variation = &"DarkWoodPanel"
script = ExtResource("2_sanme")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Logs" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryitemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Logs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_47rv2")

[node name="LogLabel" type="Label" parent="MarginContainer/VBoxContainer/Logs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Stone" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryitemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Stone"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_a80gb")

[node name="StoneLabel" type="Label" parent="MarginContainer/VBoxContainer/Stone"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Corn" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryitemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Corn"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_pceqw")

[node name="CornLabel" type="Label" parent="MarginContainer/VBoxContainer/Corn"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Tomato" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryitemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Tomato"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_v0cri")

[node name="TomatoLabel" type="Label" parent="MarginContainer/VBoxContainer/Tomato"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="egg" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryitemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/egg"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_1j8gf")

[node name="EggLabel" type="Label" parent="MarginContainer/VBoxContainer/egg"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Milk" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryitemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Milk"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_snrxo")

[node name="MilkLabel" type="Label" parent="MarginContainer/VBoxContainer/Milk"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"
